Dependency Injection implementation through factory pattern / database initialization