@@ -4,7 +4,30 @@
   <groupId>com.cibertec.alumnos</groupId>
   <artifactId>registro-matricula-alumnos</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>main.Program</mainClass>
+                    <options>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                    </options>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <version>1.0-SNAPSHOT</version>
   <name>registro-matricula-alumnos</name>
   <url>http://maven.apache.org</url>
     <properties>
@@ -14,27 +37,32 @@
         <exec.mainClass>main.Program</exec.mainClass>
     </properties>
   <dependencies>
+      <dependency>
+          <groupId>org.xerial</groupId>
+          <artifactId>sqlite-jdbc</artifactId>
+          <version>3.49.1.0</version>
+      </dependency>
   	<!-- FlatLaf - Modern Look and Feel -->
     <dependency>
         <groupId>com.formdev</groupId>
         <artifactId>flatlaf</artifactId>
         <version>3.2.5</version>
     </dependency>
-    
+
     <!-- FlatLaf extras (additional themes) -->
     <dependency>
         <groupId>com.formdev</groupId>
         <artifactId>flatlaf-extras</artifactId>
         <version>3.2.5</version>
     </dependency>
-    
+
     <!-- FlatLaf IntelliJ themes -->
     <dependency>
         <groupId>com.formdev</groupId>
         <artifactId>flatlaf-intellij-themes</artifactId>
         <version>3.2.5</version>
     </dependency>
-    
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
